force-app/main/default/objects/Pulse_Report_Enquiry__c/Pulse_Report_Enquiry__c.object-meta.xml
<CustomObject>
    <label>Pulse Report Enquiry</label>
    <nameField>
        <label>Pulse Report Enquiry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pulse Report Enquiry</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>