force-app/main/default/objects/Pulse_Report_Enquiry__c/fields/Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Enquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enquiry</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Pulse Report Enquiry</relationshipLabel>
    <relationshipName>Pulse_Report_Enquiry</relationshipName>
    <type>Lookup</type>
</CustomField>