force-app/main/default/objects/Pulse_Report_Enquiry__c/fields/Other_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Other_Remarks__c</fullName>
    <label>Other Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>