force-app/main/default/objects/Pulse_Report_Enquiry__c/fields/Tasks_performed_on_last_week__c.field-meta.xml
<CustomField>
    <fullName>Tasks_performed_on_last_week__c</fullName>
    <label>Tasks performed on last week</label>
    <length>255</length>
    <type>Text</type>
</CustomField>